language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_int_binary_to_octal_in_constants.snap
---
source: language-server/src/tests/action.rs
expression: const wibble = 0b1101111
---
----- BEFORE ACTION
const wibble = 0b1101111
               ↑        


----- AFTER ACTION
const wibble = 0o157
