language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_int_binary_to_octal_in_patterns.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go(x) {\n  let assert <<0b1101111>> = x\n}"
---
----- BEFORE ACTION
pub fn go(x) {
  let assert <<0b1101111>> = x
               ↑              
}


----- AFTER ACTION
pub fn go(x) {
  let assert <<0o157>> = x
}
